--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .Container {
   height: 65vh;
-  width: 100%;
+  max-width: 100%;
   position: relative;
   margin: 0 auto;
   padding: 0;
@@ -37,7 +37,8 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90%;
+  width: 100%;
+
   align-items: center;
   justify-content: center;
   text-align: center;
