--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -79,6 +79,10 @@ gap: 3rem;
     margin-bottom: 1rem;
 }
 
+.cardText{
+    font-size: 1.2rem;
+}
+
 .qualityriders{
     display: flex;
     justify-content: center;
@@ -87,7 +91,7 @@ gap: 3rem;
     padding: 30px ;
     gap: 3rem;
     background-color: rgba(0, 0, 0, 0.04);
-    width: 100%;
+    max-width: 100%;
     height: 30rem;
     margin: 0 auto;
 }
