--- a/src/components/fPassCard/fPassCard.css
+++ b/src/components/fPassCard/fPassCard.css
@@ -1,3 +1,25 @@
+.maindiv {
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+gap: 24px;
+width: 432px;
+height: 273px;
+
+}
+
+.labelpass {
+width: 41px;
+height: 24px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+color: #000000;
+}
+
 .h{
     background: #E5E5E5;
     height: 100vh;
@@ -13,17 +35,25 @@
     display: flex
 }
 .fill{
-    width: 396px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 9px, 16px, 8px;
+    gap: 16px;
+    width: 395px;
     height: 48px;
-    margin-top: 10px;
-    border: 1px solid #BDBDBD;
+    background: #FFFFFF;
+    opacity: 0.8;
+    border: 1px solid #000000;
+    border-radius: 6px;
 }
 .size{
     margin: 10px;
 }
 
 .nter {
-    width: 400px;
+width: 400px;
 height: 38px;
 
 font-family: 'Inter';
@@ -36,19 +66,26 @@ padding: 5px;
 color: #C4C4C4;
 }
 .resetBtn{
+    
+    /* margin-top: 10px; */
     background-color: #E02B45;
     padding: 16px, 24px, 16px, 24px;
     width: 396px;
     height: 48px;
     border: none;
     color: #FFFFFF;
-
+    border: 1px solid #000000;
+    border-radius: 9px;
 }
 .backLog{
-    margin-top: 20px;
-    padding: 8px, 16px, 10px, 16px;
-    width: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+    padding: 8px, 16px, 10px;
+    width: 136px;
     height: 48px;
     border: 1px solid #BDBDBD;
-    background-color: #FFFFFF;
+    border-radius: 5px;
 }
