--- a/src/pages/userNotification/Modal2.module.css
+++ b/src/pages/userNotification/Modal2.module.css
@@ -229,11 +229,14 @@ body.active-modal {
 }
 .length {
   position: relative;
-  width: 1.2em;
-  height: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: red;
-  bottom: 15px;
+  /* bottom: 15px; */
   font-size: 11px;
   left: 14px;
   color: white;
