--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,9 @@ input {
 
 .pickup_history_table {
   background-color: #FFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .pickup_pagination {
   margin-top : 1.03em;
