--- a/src/pages/RidersDashboard/RidersDashboard.module.css
+++ b/src/pages/RidersDashboard/RidersDashboard.module.css
@@ -67,6 +67,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    width: 100%;
     border-bottom: 1px solid #E5E5E5;
     height: 65px;
 }
