--- a/src/pages/RidersDashboard/RidersDashboard.module.css
+++ b/src/pages/RidersDashboard/RidersDashboard.module.css
@@ -306,7 +306,18 @@
     text-decoration:    none;
     color:   rgb(35, 35, 101);
 }
-
+.rchat_container_pa{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    top: 90px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: rgba(133, 124, 124, 0.44);
+    margin: auto;
+  }
 
 @media only screen and (max-width: 767px) {
     .overviewHeader {
