--- a/src/pages/RidersSignupForm /RidersSignupForm.module.css
+++ b/src/pages/RidersSignupForm /RidersSignupForm.module.css
@@ -64,7 +64,7 @@
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 100%;
+    height: auto;
 }
 .form_bx{
     box-sizing: border-box;
@@ -81,7 +81,7 @@
     color: #000;
 }
 .form_elem{
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     position: relative;
 }
 .form_elem input, .form_elem select{
@@ -159,19 +159,24 @@ p.signin a{
     color: #E02B45;
     text-decoration: none;
 }
-@media (max-width: 768px){
+@media (max-width: 900px){
     .Rider_Signup_container .image_container {
             position: absolute;
             width: 100%;
             height: 100%;
             top: 0;
             left: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
     }
     .Rider_Signup_container .signup_form_field_container {
         display: flex;
         justify-content: center;
-        align-items: center;
-        width: 100%;
+        /* align-items: center; */
+        margin: auto;
+        width: 80%;
         height: 100%;
         z-index: 5;
     }
