--- a/src/pages/userDashboard/userDashboard.module.css
+++ b/src/pages/userDashboard/userDashboard.module.css
@@ -513,7 +513,18 @@ color: #21334F;
   /* .contacts_holder{
       margin-left:50px;
   } */
-
+  .rchat_container_pa{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    top: 90px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: rgba(133, 124, 124, 0.44);
+    margin: auto;
+  }
   @media only screen and (max-width:900px){
     /* .userD_main_container{
       grid-template-columns: auto;
